tests/paczka1/small_fuzzy/65204465.err
Error in line 1: CXYaQ A507 1,7
Error in line 2: 5vjMzIyc3 A543 66,0
Error in line 6: CXYaQ S518 65,2
Error in line 10: CXYaQ A543 16,5
